--- a/configs/tsn_r50_gn_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/configs/tsn_r50_gn_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -3,12 +3,12 @@ NUM_NODES: 1
 RANK_ID: 0
 DIST_BACKEND: "nccl"
 RNG_SEED: 1
-OUTPUT_DIR: 'outputs/tsn_mbv2_ucf101_rgb_raw_dense_1x16x4'
+OUTPUT_DIR: 'outputs/tsn_r50_gn_ucf101_rgb_raw_dense_1x16x4'
 TRAIN:
   LOG_STEP: 10
-  MAX_EPOCH: 100
-  SAVE_EPOCH: 10
-  EVAL_EPOCH: 10
+  MAX_EPOCH: 200
+  SAVE_EPOCH: 5
+  EVAL_EPOCH: 5
   RESUME: False
   USE_TENSORBOARD: True
 DATASETS:
@@ -47,20 +47,25 @@ TRANSFORM:
     THREE_CROP: False
     TEST_CROP_SIZE: 256
 DATALOADER:
-  TRAIN_BATCH_SIZE: 96
-  TEST_BATCH_SIZE: 96
+  TRAIN_BATCH_SIZE: 24
+  TEST_BATCH_SIZE: 24
   NUM_WORKERS: 8
 MODEL:
   NAME: 'TSN'
   PRETRAINED: ''
-  SYNC_BN: True
-  BACKBONE:
-    NAME: 'ShuffleNet_v2'
+  NORM:
+    TYPE: 'GroupNorm'
+    SYNC_BN: False
+    FIX_BN: False
     PARTIAL_BN: False
-    TORCHVISION_PRETRAINED: True
+  BACKBONE:
+    NAME: 'ResNetBackbone'
+    TORCHVISION_PRETRAINED: False
+    ARCH: "resnet50"
+    ZERO_INIT_RESIDUAL: True
   HEAD:
     NAME: 'TSNHead'
-    FEATURE_DIMS: 1024
+    FEATURE_DIMS: 2048
     DROPOUT: 0.5
     NUM_CLASSES: 101
   RECOGNIZER:
@@ -71,8 +76,8 @@ MODEL:
     NAME: 'CrossEntropyLoss'
 OPTIMIZER:
   NAME: 'SGD'
-  LR: 1e-2
-  WEIGHT_DECAY: 3e-5
+  LR: 1e-3
+  WEIGHT_DECAY: 1e-5
   SGD:
     MOMENTUM: 0.9
 LR_SCHEDULER:
@@ -80,7 +85,7 @@ LR_SCHEDULER:
   IS_WARMUP: True
   GAMMA: 0.1
   MULTISTEP_LR:
-    MILESTONES: [ 50, 80 ]
+    MILESTONES: [ 100, 150, 175 ]
   WARMUP:
     ITERATION: 5
     MULTIPLIER: 1.0
