--- a/configs/tsn_r50_pretrained_sync_bn_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/configs/tsn_r50_pretrained_sync_bn_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -3,21 +3,22 @@ NUM_NODES: 1
 RANK_ID: 0
 DIST_BACKEND: "nccl"
 RNG_SEED: 1
-OUTPUT_DIR: 'outputs/tsn_r50_ucf101_rgbdiff_raw_seg_1x1x3'
+OUTPUT_DIR: 'outputs/tsn_r50_pretrained_sync_bn_ucf101_rgb_raw_dense_1x16x4'
 TRAIN:
   LOG_STEP: 10
-  MAX_EPOCH: 100
-  SAVE_EPOCH: 10
-  EVAL_EPOCH: 10
+  MAX_EPOCH: 200
+  SAVE_EPOCH: 5
+  EVAL_EPOCH: 5
   RESUME: False
   USE_TENSORBOARD: True
 DATASETS:
-  MODALITY: 'RGBDiff'
+  MODALITY: 'RGB'
   TYPE: 'RawFrame'
-  SAMPLE_STRATEGY: 'SegSample'
-  CLIP_LEN: 5
-  FRAME_INTERVAL: 1
-  NUM_CLIPS: 3
+  SAMPLE_STRATEGY: 'DenseSample'
+  CLIP_LEN: 1
+  FRAME_INTERVAL: 16
+  NUM_CLIPS: 4
+  NUM_SAMPLE_POSITIONS: 1
   TRAIN:
     NAME: 'UCF101'
     DATA_DIR: 'data/ucf101/rawframes'
@@ -46,17 +47,21 @@ TRANSFORM:
     THREE_CROP: False
     TEST_CROP_SIZE: 256
 DATALOADER:
-  TRAIN_BATCH_SIZE: 6
-  TEST_BATCH_SIZE: 6
+  TRAIN_BATCH_SIZE: 24
+  TEST_BATCH_SIZE: 24
   NUM_WORKERS: 8
 MODEL:
   NAME: 'TSN'
-  PRETRAINED: ""
-  SYNC_BN: True
-  BACKBONE:
-    NAME: 'ResNet50'
+  PRETRAINED: ''
+  NORM:
+    TYPE: 'BatchNorm2d'
+    SYNC_BN: True
+    FIX_BN: False
     PARTIAL_BN: False
+  BACKBONE:
+    NAME: 'ResNetBackbone'
     TORCHVISION_PRETRAINED: True
+    ARCH: "resnet50"
     ZERO_INIT_RESIDUAL: True
   HEAD:
     NAME: 'TSNHead'
@@ -72,15 +77,15 @@ MODEL:
 OPTIMIZER:
   NAME: 'SGD'
   LR: 1e-3
-  WEIGHT_DECAY: 3e-5
+  WEIGHT_DECAY: 1e-5
   SGD:
     MOMENTUM: 0.9
 LR_SCHEDULER:
   NAME: 'MultiStepLR'
   IS_WARMUP: True
-  GAMMA: 0.2
+  GAMMA: 0.1
   MULTISTEP_LR:
-    MILESTONES: [ 50, 80 ]
+    MILESTONES: [ 100, 150, 175 ]
   WARMUP:
     ITERATION: 5
     MULTIPLIER: 1.0
