--- a/configs/tsn/tsn_r50_pretrained_sync_bn_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/configs/tsn/tsn_r50_pretrained_sync_bn_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -70,7 +70,7 @@ MODEL:
     NUM_CLASSES: 101
   RECOGNIZER:
     NAME: 'TSNRecognizer'
-  CONSENSU:
+  CONSENSUS:
     NAME: 'AvgConsensus'
   CRITERION:
     NAME: 'CrossEntropyLoss'
