test(demo): slowfast update

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,29 +6,42 @@ Pillow == 8.1.0
 # TSN/tsn/data/datasets/video/video_container.py: 4
 av == 8.0.2
 
+# TSN/demo/custom/visualizer/img_visualizer.py: 15
+# TSN/demo/slowfast/visualizer/img_visualizer.py: 15
+# TSN/demo/slowfast2/predictor/detectron2_predictor.py: 6,7,8
+# TSN/demo/slowfast2/visualizer/img_visualizer.py: 9
+detectron2 == 0.3+cu102
+
 # TSN/tools/data/kinetics400/download.py: 15
 joblib == 1.0.0
 
-# TSN/demo/multiprocess/visualizer/img_visualizer.py: 13
-# TSN/demo/multiprocess/visualizer/video_visualizor.py: 14
-# TSN/demo/visualization/visualizer/img_visualizer.py: 13
-# TSN/demo/visualization/visualizer/video_visualizer.py: 7
+# TSN/demo/custom/visualizer/img_visualizer.py: 13
+# TSN/demo/custom/visualizer/video_visualizor.py: 14
+# TSN/demo/slowfast/visualizer/img_visualizer.py: 13
+# TSN/demo/slowfast/visualizer/video_visualizer.py: 7
+# TSN/demo/slowfast2/visualizer/img_visualizer.py: 7
+# TSN/demo/slowfast2/visualizer/video_visualizer.py: 13
 matplotlib == 3.3.3
 
 # TSN/tools/data/build_rawframes.py: 9
 mmcv_full == 1.2.5
 
-# TSN/demo/demo.py: 10
-# TSN/demo/demo_net.py: 4
+# TSN/demo/custom/demo.py: 10
+# TSN/demo/custom/predictor/action_predictor.py: 12
+# TSN/demo/custom/visualizer/img_visualizer.py: 12
+# TSN/demo/custom/visualizer/video_visualizor.py: 13
 # TSN/demo/mmaction2/demo.py: 14
 # TSN/demo/mmaction2/webcam_demo.py: 12
-# TSN/demo/multiprocess/predictor/action_predictor.py: 12
-# TSN/demo/multiprocess/visualizer/img_visualizer.py: 12
-# TSN/demo/multiprocess/visualizer/video_visualizor.py: 13
-# TSN/demo/visualization/predictor/util.py: 11
-# TSN/demo/visualization/visualizer/async_visualizer.py: 11
-# TSN/demo/visualization/visualizer/img_visualizer.py: 12
-# TSN/demo/visualization/visualizer/video_visualizer.py: 6
+# TSN/demo/slowfast/demo_net.py: 10
+# TSN/demo/slowfast/predictor/util.py: 11
+# TSN/demo/slowfast/visualizer/async_visualizer.py: 11
+# TSN/demo/slowfast/visualizer/img_visualizer.py: 12
+# TSN/demo/slowfast/visualizer/video_visualizer.py: 6
+# TSN/demo/slowfast2/demo_net.py: 4
+# TSN/demo/slowfast2/predictor/async_action_predictor.py: 5
+# TSN/demo/slowfast2/visualizer/async_vis.py: 5
+# TSN/demo/slowfast2/visualizer/img_visualizer.py: 6
+# TSN/demo/slowfast2/visualizer/video_visualizer.py: 12
 # TSN/test/test_clipsample.py: 11
 # TSN/test/test_transforms.py: 10
 # TSN/tools/compute_flops.py: 11
@@ -50,16 +63,19 @@ mmcv_full == 1.2.5
 # TSN/tsn/util/metric_logger.py: 2
 numpy == 1.19.5
 
+# TSN/demo/custom/manager/live.py: 10
+# TSN/demo/custom/manager/video_manager.py: 10
+# TSN/demo/custom/manager/video_provider.py: 10
+# TSN/demo/custom/predictor/action_predictor.py: 11
+# TSN/demo/custom/visualizer/video_visualizor.py: 11
 # TSN/demo/mmaction2/constant.py: 10
 # TSN/demo/mmaction2/webcam_demo.py: 11
-# TSN/demo/multiprocess/manager/live.py: 10
-# TSN/demo/multiprocess/manager/video_manager.py: 10
-# TSN/demo/multiprocess/manager/video_provider.py: 10
-# TSN/demo/multiprocess/predictor/action_predictor.py: 11
-# TSN/demo/multiprocess/visualizer/video_visualizor.py: 11
-# TSN/demo/visualization/manager/thread_video_manager.py: 15
-# TSN/demo/visualization/manager/video_manager.py: 10
-# TSN/demo/visualization/predictor/util.py: 10
+# TSN/demo/slowfast/manager/thread_video_manager.py: 15
+# TSN/demo/slowfast/manager/video_manager.py: 10
+# TSN/demo/slowfast/predictor/util.py: 10
+# TSN/demo/slowfast2/manager/thread_video_manager.py: 9
+# TSN/demo/slowfast2/manager/video_manager.py: 6
+# TSN/demo/slowfast2/predictor/predictor.py: 4
 # TSN/tsn/data/datasets/rawframe_dataset.py: 12
 # TSN/tsn/data/transforms/augmentation/resize.py: 10
 # TSN/tsn/data/transforms/augmentation/scale_jitter.py: 10
@@ -78,19 +94,28 @@ tabulate == 0.8.7
 # TSN/tsn/util/metrics.py: 10
 thop == 0.0.31.post2005241907
 
-# TSN/demo/demo.py: 11,12
-# TSN/demo/demo_net.py: 6
+# TSN/demo/custom/demo.py: 11,12
+# TSN/demo/custom/predictor/action_predictor.py: 10
+# TSN/demo/custom/visualizer/img_visualizer.py: 14
+# TSN/demo/custom/visualizer/video_visualizor.py: 12
 # TSN/demo/mmaction2/demo.py: 15
 # TSN/demo/mmaction2/webcam_demo.py: 13
-# TSN/demo/multiprocess/predictor/action_predictor.py: 10
-# TSN/demo/multiprocess/visualizer/img_visualizer.py: 14
-# TSN/demo/multiprocess/visualizer/video_visualizor.py: 12
-# TSN/demo/visualization/predictor/async_predictor.py: 5,6
-# TSN/demo/visualization/predictor/predictor.py: 4
-# TSN/demo/visualization/predictor/util.py: 12
-# TSN/demo/visualization/visualizer/async_visualizer.py: 12
-# TSN/demo/visualization/visualizer/img_visualizer.py: 14
-# TSN/demo/visualization/visualizer/video_visualizer.py: 8
+# TSN/demo/slowfast/demo_net.py: 12
+# TSN/demo/slowfast/predictor/async_predictor.py: 5,6
+# TSN/demo/slowfast/predictor/predictor.py: 4
+# TSN/demo/slowfast/predictor/util.py: 12
+# TSN/demo/slowfast/visualizer/async_visualizer.py: 12
+# TSN/demo/slowfast/visualizer/img_visualizer.py: 14
+# TSN/demo/slowfast/visualizer/video_visualizer.py: 8
+# TSN/demo/slowfast2/demo_net.py: 6
+# TSN/demo/slowfast2/predictor/async_action_predictor.py: 7,8
+# TSN/demo/slowfast2/predictor/async_predictor.py: 5,6
+# TSN/demo/slowfast2/predictor/detectron2_predictor.py: 5
+# TSN/demo/slowfast2/predictor/predictor.py: 5
+# TSN/demo/slowfast2/utils/misc.py: 4
+# TSN/demo/slowfast2/visualizer/async_vis.py: 6
+# TSN/demo/slowfast2/visualizer/img_visualizer.py: 8
+# TSN/demo/slowfast2/visualizer/video_visualizer.py: 14
 # TSN/test/test_clipsample.py: 10
 # TSN/test/test_model/test_backbone/test_basicblock.py: 10,11
 # TSN/test/test_model/test_backbone/test_bottleneck.py: 10,11
@@ -153,12 +178,14 @@ torch == 1.7.1
 # TSN/tsn/util/collect_env.py: 11
 torchvision == 0.8.2
 
-# TSN/demo/demo_net.py: 7
+# TSN/demo/slowfast/demo_net.py: 13
+# TSN/demo/slowfast2/demo_net.py: 7
 # TSN/tools/fusion_test.py: 14
 # TSN/tsn/engine/inference.py: 13
 tqdm == 4.56.0
 
-# TSN/demo/visualization.py: 10
+# TSN/demo/slowfast/configs/demo.py: 10
+# TSN/demo/slowfast2/configs/demo.py: 10
 # TSN/tsn/config/dataloader.py: 10
 # TSN/tsn/config/dataset.py: 10
 # TSN/tsn/config/defaults.py: 1
